https://online.sbis.ru/opendoc.html?guid=58692eda-b230-49c8-ae48-a1bfb3258b23

--- a/Controls-demo/Menu/Menu.less
+++ b/Controls-demo/Menu/Menu.less
@@ -7,11 +7,11 @@
    margin: 25px auto;
 }
 
-.controlsDemo-menuControl_minWidth {
+.ControlsDemo-menuControl_minWidth {
    min-width: 130px;
 }
 
-.controls-demo-Menu-Control__footerContentTemplate {
+.ControlsDemo-Menu-Control__footerContentTemplate {
    color: #05b;
    cursor: pointer;
    padding: 0 12px;
@@ -23,4 +23,13 @@
       color: #313e78;
       text-decoration: underline;
    }
+}
+
+.ControlsDemo-Menu-Control__itemTemplate {
+   justify-content: space-between;
+}
+
+.ControlsDemo-Menu-Control__rightTemplate {
+   color: @secondary_color;
+   margin-left: 8px;
 }
