--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -17,8 +17,8 @@
 
 .controls-Menu__row {
    position: relative;
-   .flexbox();
-   .align-items(center);
+   display: flex;
+   align-items: center;
 }
 
 .controls-Menu__row_state_default_theme-@{themeName} {
