https://online.sbis.ru/opendoc.html?guid=1ba6c19d-6e40-4380-82e2-629d58cf9675

--- a/Controls-default-theme/aliases/_heading.less
+++ b/Controls-default-theme/aliases/_heading.less
@@ -16,6 +16,8 @@
 @font-size_4xl_heading:                                                     @font-size_4xl;
 @font-size_5xl_heading:                                                     @font-size_5xl;
 
+@font-size_m_headingBack:                                                   @font-size_3xl;
+
 // Цвета текста
 
 @primary_text-color_heading:                                                @primary_text-color;
