--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -21,6 +21,9 @@
    white-space: nowrap;
    min-width: 1px;
    max-width: 100%;
+
+   //во всех темах
+   font-weight: bold;
 }
 
 .controls-BreadCrumbsPath__home_theme-@{themeName} {
@@ -164,4 +167,8 @@
 
 .controls-BreadCrumbsPath__backButton_zeroWidth {
    width: 0;
+}
+
+.controls-BreadCrumbsPath__backButton_theme-@{themeName} .controls-fontsize-3xl_theme-@{themeName} when not (@font-size_m_headingBack = @font-size_3xl) {
+   font-size: @font-size_m_headingBack;
 }
