--- a/Controls-default-theme/aliases/_lookup.less
+++ b/Controls-default-theme/aliases/_lookup.less
@@ -64,11 +64,11 @@
 @item_height_lookupSelectedCollection:                                          @inline_height_default;
 
 //Размеры шрифта
-@item_font-size_m_input:                                                         @font-size_m;
-@item_font-size_l_input:                                                         @font-size_l;
-@item_font-size_xl_input:                                                        @font-size_xl;
-@item_font-size_2xl_input:                                                       @font-size_2xl;
-@item_font-size_3xl_input:                                                       @font-size_3xl;
+@item_font-size_m_lookupSelectedCollection:                                    @font-size_m;
+@item_font-size_l_lookupSelectedCollection:                                    @font-size_l;
+@item_font-size_xl_lookupSelectedCollection:                                   @font-size_xl;
+@item_font-size_2xl_lookupSelectedCollection:                                  @font-size_2xl;
+@item_font-size_3xl_lookupSelectedCollection:                                  @font-size_3xl;
 
 // Кнопка сброса одного значения
 
