https://online.sbis.ru/opendoc.html?guid=17cb2b0d-d14c-4dd3-9acd-9abc49a1d56b

--- a/Controls-default-theme/aliases/_lookupPopup.less
+++ b/Controls-default-theme/aliases/_lookupPopup.less
@@ -1,5 +1,6 @@
 // Переменные для панели выбора из справочника
 //
-// Переменные для отображения выбранных значений
+// Заголовок окна
 
-@header_height_lookupPopup:                            @icon-size_m;
+@heading_height_lookupPopup:                            @icon-size_m;
+@heading_font-size_lookupPopup:                         @font-size_m;
