--- a/Controls/_lookup/SelectedCollection/_SelectedCollection.less
+++ b/Controls/_lookup/SelectedCollection/_SelectedCollection.less
@@ -109,23 +109,23 @@
 
 .controls-SelectedCollection__item__caption-size-default_theme-@{themeName},
 .controls-SelectedCollection__item__caption-size-m_theme-@{themeName} {
-    font-size: @item_font-size_m_lookupSelectedCollection;
+    font-size: @font-size_m;
 }
 
 .controls-SelectedCollection__item__caption-size-l_theme-@{themeName} {
-    font-size: @item_font-size_l_lookupSelectedCollection;
+    font-size: @font-size_l;
 }
 
 .controls-SelectedCollection__item__caption-size-xl_theme-@{themeName} {
-    font-size: @item_font-size_xl_lookupSelectedCollection;
+    font-size: @font-size_xl;
 }
 
 .controls-SelectedCollection__item__caption-size-2xl_theme-@{themeName} {
-    font-size: @item_font-size_2xl_lookupSelectedCollection;
+    font-size: @font-size_2xl;
 }
 
 .controls-SelectedCollection__item__caption-size-3xl_theme-@{themeName} {
-    font-size: @item_font-size_3xl_lookupSelectedCollection;
+    font-size: @font-size_3xl;
 }
 
 .controls-SelectedCollection__item__caption-style-bold_theme-@{themeName},
