--- a/Controls/_lookupPopup/SelectedCollection/_Popup.less
+++ b/Controls/_lookupPopup/SelectedCollection/_Popup.less
@@ -11,7 +11,8 @@
 }
 
 .controls-SelectedCollection__header_wrapper_theme-@{themeName} {
-    line-height: @header_height_lookupPopup;
+    line-height: @heading_height_lookupPopup;
+    font-size: @heading_font-size_lookupPopup;
     padding-left: @spacing_default_l;
     padding-top: @close-button_offset-top_infobox;
 }
