https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290 плитка и многоколоночный

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -17,6 +17,7 @@
 @import "_spoiler";
 @import "_toolbars";
 @import "_tabs";
+@import "_tile";
 @import "_operations";
 @import "_filter";
 @import "_filterPopup";
@@ -30,4 +31,5 @@
 @import "_suggest";
 @import "_suggestPopup";
 @import "_calendar";
+@import "_columns";
 @import "_treeGrid";
