https://online.sbis.ru/opendoc.html?guid=e1a6a78b-b9bd-4fab-b366-141bbc8bb410

--- a/Controls-default-theme/_notAliasesToDelete.less
+++ b/Controls-default-theme/_notAliasesToDelete.less
@@ -153,6 +153,8 @@
 @color_TreeGridView-expander_val:                                 #313E78;
 @border-color_TreeGridView-item_dragging_val:                     #0055BB;
 
+@color_TreeGridView-expander:                                     @color_TreeGridView-expander_val; //RetailStats юзает
+
 // TileView
 @spacing_TileView-between-title-topBorder_val:                            4px;
 @spacing_TileView-between-title-bottomBorder_val:                         2px;
