https://online.sbis.ru/opendoc.html?guid=1f4a8704-fe2b-4fb8-abd2-d4de3c417290 Свайп дока + Explorer

--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -7,6 +7,7 @@
 @import "_input";
 @import "_list";
 @import "_editableArea";
+@import "_explorer";
 @import "_paging";
 @import "_popupTemplate";
 @import "_progress";
