https://online.sbis.ru/opendoc.html?guid=87506933-fb55-4a82-b800-c7d2e7b6fe80 добавил в отображение ItemActions учёт controls-itemActionsV_invisible

--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -243,7 +243,7 @@
    .controls-Grid__row_highlightOnHover_default_theme-@{themeName}:hover .controls-Grid__row-cell-background-hover_theme-@{themeName}:not(.controls-Grid__row-ladder-cell) {
       background-color: @item_hover_background-color_list;
    }
-   .controls-BaseControl_showActions .controls-Grid__row:hover {
+   .controls-BaseControl_showActions .controls-Grid:not(.controls-itemActionsV_invisible) .controls-Grid__row:hover {
       > .controls-Grid__row-cell,
       > .controls-itemActionsV__container {
          > .controls-itemActionsV {
