https://online.sbis.ru/opendoc.html?guid=95bb1df2-57b5-40c8-a47b-49db00aa02f9

--- a/Controls-default-theme/aliases/_operations.less
+++ b/Controls-default-theme/aliases/_operations.less
@@ -26,6 +26,7 @@
 // Размеры и отступы
 
 @height_operationsPanel:                                                    30px;
+@loadingIndicator_offset-left_multiSelectorButton:                          12px;
 
 @toolbar_padding-left_operationsPanel:                                      12px;
 @toolbar_padding-right_operationsPanel:                                     12px;
