https://online.sbis.ru/opendoc.html?guid=a0f8079d-10fa-4e74-9897-33abb562794f

--- a/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
+++ b/Controls/_breadcrumbs/HeadingPath/_HeadingPath.less
@@ -128,7 +128,7 @@
    min-width: @min-width_BackButton_short;
 }
 
-.controls-BreadCrumbsPath__homeContainer__withoutBackButton_theme-@{themeName} {
+.controls-BreadCrumbsPath__homeContainer__withoutBackButton {
    margin-left: 0;
 }
 .controls-BreadCrumbsPath__homeContainer__withBackButton_theme-@{themeName} {
