https://online.sbis.ru/opendoc.html?guid=17cb2b0d-d14c-4dd3-9acd-9abc49a1d56b

--- a/Controls-default-theme/aliases/_lookupPopup.less
+++ b/Controls-default-theme/aliases/_lookupPopup.less
@@ -2,5 +2,4 @@
 //
 // Заголовок окна
 
-@heading_height_lookupPopup:                            @icon-size_m;
-@heading_font-size_lookupPopup:                         @font-size_m;
+@heading_height_lookupPopup:                            @inline_height_default;
