https://online.sbis.ru/opendoc.html?guid=1d4ee074-dea9-47de-b3eb-91d3443f1684

--- a/Controls/_suggest/Input/_Input.less
+++ b/Controls/_suggest/Input/_Input.less
@@ -15,8 +15,8 @@
 .controls-Suggest__loader_theme-@{themeName} {
 	background: @spinner_s_background-image_loadingIndicator 0 0 no-repeat;
 	background-size: contain;
-	height: @icon-size_s;
-	width: @icon-size_s;
+	height: @spinner_s_size_loadingIndicator;
+	width: @spinner_s_size_loadingIndicator;
 	margin-right: @spinner_offset_suggest;
 }
 
