https://online.sbis.ru/opendoc.html?guid=17cb2b0d-d14c-4dd3-9acd-9abc49a1d56b

--- a/Controls/_lookupPopup/SelectedCollection/_Popup.less
+++ b/Controls/_lookupPopup/SelectedCollection/_Popup.less
@@ -10,7 +10,7 @@
     max-width: none;
 }
 
-.controls-SelectedCollection__header_wrapper {
+.controls-SelectedCollection__header_wrapper_theme-@{themeName} {
     line-height: @icon-size_m;
     padding-left: @spacing_default_l;
     padding-top: @close-button_offset-top_infobox;
