https://online.sbis.ru/opendoc.html?guid=2b9c9e47-b0e3-47e0-ba5d-2daba386e365

--- a/Controls-default-theme/aliases/_datePicker.less
+++ b/Controls-default-theme/aliases/_datePicker.less
@@ -17,14 +17,23 @@
 @header_background-color_datePicker:                     @header_background-color_sticky;
 // Отступ контента заголовка от края слева
 @header_padding-left_datePicker:                         10px;
-// Отступ между кнопкой перелючения реимов выбора и заголовком окна или полями ввода
+// Отступ между кнопкой перелючения режимов выбора и заголовком окна или полями ввода
 @switcher_offset_datePicker:                             12px;
-// Размер иконки кнопки подтверждения выбора
+
+//Кнопка переключения режимов выбора
 @switcher_icon-size_datePicker:                          @icon-size_s;
+@switcher_icon-color_datePicker:                         @secondary_color;
+@switcher_hover_icon-color_datePicker:                   @link_hover_text-color;
+@switcher_active_icon-color_datePicker:                  @switcher_hover_icon-color_datePicker;
+
 // Отступ между кнопкой подтвержения выбора и другими элементами справа и слева
 @apply-button_offset_datePicker:                         12px;
-// Размер кнопки переключения к текущему периоду(домик)
+
+//Кнопка переключения к текущему периоду
 @home_icon-size_datePicker:                              @icon-size_s;
+@home_icon-color_datePicker:                             @secondary_color;
+@home_hover_icon-color_datePicker:                       @link_hover_text-color;
+@home_active_icon-color_datePicker:                      @home_hover_icon-color_datePicker;
 
 // Годовой режим
 // Панель выбора и переключения годов
@@ -157,21 +166,3 @@
 @monthnav_year_separator_thickness_datePicker:           1px;
 // Цвет линии разделяющей месяца
 @monthnav_year_separator_color_datePicker:               #EAEAEA;
-// Высота заголовка месяца
-@monthlist_heading_height_datePicker:                    36px;
-// Размер шрифта заголовка месяца
-@monthlist_heading_font-size_datePicker:                 @font-size_3xl;
-// Цвет текста заголовка месяца
-@monthlist_heading_text-color_datePicker:                @secondary_text-color;
-// Толщина шрифта заголовка месяца
-@monthlist_heading_font-weight_datePicker:               bold;
-// Цвет фона заголовка месяца
-@monthlist_heading_background-color_datePicker:          transparent;
-// Цвет границ заголовка месяца
-@monthlist_heading_border-color_datePicker:              transparent;
-// Толщина границ заголовка месяца
-@monthlist_heading_border-thickness_datePicker:          @border-thickness;
-// Цвет границ заголовка месяца при наведении
-@monthlist_heading_hover_border-color_datePicker:        #8991A9;
-// Цвет фона заголовка месяца при наведении
-@monthlist_heading_hover_background-color_datePicker:    @monthlist_heading_background-color_datePicker;
