--- a/Controls-default-theme/controls/_PeriodDialog.less
+++ b/Controls-default-theme/controls/_PeriodDialog.less
@@ -1,9 +1,8 @@
 // month range
-@height_PeriodDialog-monthRange-month-date:           @height_PeriodDialog-monthRange-month-date_val;
+@height_PeriodDialog-monthRange-month-date:           12px;
 @width_PeriodDialog-monthRange-month-date:            @height_PeriodDialog-monthRange-month-date;
-@font-size_PeriodDialog-monthRange-month-date:        @font-size_PeriodDialog-monthRange-month-date_val;
-@height_PeriodDialog-monthRange-month-title:          @height_PeriodDialog-monthRange-month-title_val;
-@font-size_PeriodDialog-monthRange-month-title:       @font-size_text_m;
+@font-size_PeriodDialog-monthRange-month-date:        8px;
+@height_PeriodDialog-monthRange-month-title:          auto;
 @width_PeriodDialog-monthRange-month-selectionEdge:   @thickness_border_default;
 
 // additional styles
