--- a/Controls/_calendar/MonthView/_MonthView.less
+++ b/Controls/_calendar/MonthView/_MonthView.less
@@ -45,6 +45,7 @@
 }
 
 .controls-MonthViewVDOM__item {
+   position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
@@ -113,7 +114,7 @@
    z-index: 1; //При масштабе 150% соседние блоки наезжают на outline
 }
 
-.controls-MonthViewVDOM__item-today-background_theme-@{themeName} {
+.controls-MonthViewVDOM__item-today-background {
    position: absolute;
    z-index: -1;
 }
