--- a/Controls/_datePopup/_dateRange.less
+++ b/Controls/_datePopup/_dateRange.less
@@ -166,3 +166,63 @@
    transform: translateZ(0);
    will-change: transform;
 }
+
+.controls-DateRangeBigChoose-DateRangePicker__item {
+   width: @monthlist_monthview_width_datePicker;
+   height: @monthlist_monthview_height_datePicker;
+}
+
+.controls-MonthViewVDOM__item_theme-@{themeName}-style-DateRangeItem {
+   font-size: @monthlist_monthview_item_font-size_datePicker;
+   min-width: @monthlist_monthview_item_width_datePicker;
+   min-height: @monthlist_monthview_item_height_datePicker;
+   margin-top: @monthlist_monthview_item_border-thickness_datePicker;
+   margin-left: @monthlist_monthview_item_border-thickness_datePicker;
+}
+
+.ws-is-no-touch {
+   .controls-MonthViewVDOM__item_theme-@{themeName}-style-DateRangeItem:hover {
+      outline: @monthlist_monthview_item_border-thickness_datePicker solid @monthlist_monthview_item_hover_border-color_datePicker;
+   }
+   .controls-MonthViewVDOM__backgroundColor-currentMonthDay-selected_theme-@{themeName}_style-DateRangeItem:hover {
+      background: @monthlist_monthview_item_selected_hover_background-color_datePicker;
+   }
+
+   .controls-MonthViewVDOM__item-selectedStartEnd_theme-@{themeName}.controls-MonthViewVDOM__backgroundColor-currentMonthDay-selected_theme-@{themeName}_style-DateRangeItem:hover{
+      outline: @monthlist_monthview_selection-border_single_thickness_datePicker solid @monthlist_monthview_selection-border_single_color_datePicker;
+   }
+}
+
+.controls-MonthViewVDOM__textColor-currentMonthDay-weekend_theme-@{themeName}_style-DateRangeItem {
+   color: @monthlist_monthview_weekend_text-color_datePicker;
+}
+
+.controls-MonthViewVDOM__textColor-currentMonthDay-workday_theme-@{themeName}_style-DateRangeItem {
+   color: @monthlist_monthview_item_text-color_datePicker;
+}
+
+.controls-MonthViewVDOM__backgroundColor-currentMonthDay-unselected_theme-@{themeName}_style-DateRangeItem {
+   background: @monthlist_monthview_item_background-color_datePicker;
+}
+
+.controls-MonthViewVDOM__backgroundColor-currentMonthDay-selected_theme-@{themeName}_style-DateRangeItem {
+   background: @monthlist_monthview_item_selected_background-color_datePicker;
+}
+
+.controls-MonthViewVDOM__item-today-background_theme-@{themeName}-style-DateRangeItem {
+   top: @monthlist_monthview_today_offset_datePicker;
+   bottom: @monthlist_monthview_today_offset_datePicker;
+   left: @monthlist_monthview_today_offset_datePicker;
+   right: @monthlist_monthview_today_offset_datePicker;
+   border-radius: @monthlist_monthview_today_border-radius_datePicker;
+   background-color: @monthlist_monthview_today_background-color_datePicker;
+   border: @monthlist_monthview_today_border-thickness_datePicker solid @monthlist_monthview_today_border-color_datePicker;
+}
+
+.controls-MonthViewVDOM__textColor-currentMonthDay-today_theme-@{themeName}_style-DateRangeItem {
+   color: @monthlist_monthview_today_text-color_datePicker;
+}
+
+.controls-MonthViewVDOM__backgroundColor-currentMonthDay-selected-startend-unfinished_theme-@{themeName}_style-DateRangeItem {
+   background: @rangeSelection_item_hover_background-color_datePicker;
+}
