https://online.sbis.ru/opendoc.html?guid=1d516b49-2950-4983-ad64-7cc0b3966427

--- a/Controls/_filterPopup/Panel/Lookup/_Lookup.less
+++ b/Controls/_filterPopup/Panel/Lookup/_Lookup.less
@@ -5,6 +5,7 @@
 
 .controls-FilterPanel__Lookup_link {
   margin-right: @spacing_FilterPanelLookup-between-lookup-link;
+  font-size: @item_font-size_filterPanel;
 }
 
 // Единственное решение, которое позволяет сдвинуть поле ввода влево
