--- a/Controls/_filterPopup/Panel/Text/_Text.less
+++ b/Controls/_filterPopup/Panel/Text/_Text.less
@@ -7,6 +7,10 @@
    line-height: @item_height_filterPanel;
 }
 
+.controls-FilterPanelText-caption {
+   font-size: @item_font-size_filterPanel;
+}
+
 .controls-FilterText__reset {
    .flexbox();
    .align-self(center);
