https://online.sbis.ru/opendoc.html?guid=9192d375-0c12-42fb-872a-4fa5e8234c23

--- a/Controls-default-theme/aliases/_input.less
+++ b/Controls-default-theme/aliases/_input.less
@@ -34,6 +34,14 @@
 @border-style_focus_inputText:                                              solid;
 @invalid_border-style_inputText:                                            solid;
 
+@border-radius_xs_inputText:                                                0;
+@border-radius_s_inputText:                                                 0;
+@border-radius_m_inputText:                                                 0;
+@border-radius_l_inputText:                                                 0;
+@border-radius_xl_inputText:                                                0;
+@border-radius_2xl_inputText:                                               0;
+@border-radius_default_inputText:                                           0;
+
 @border-color_inputText:                                                    #EAEAEA #EAEAEA #CCCCCC #EAEAEA;
 @border-color_hover_inputText:                                              #EAEAEA #EAEAEA #AAB0C1 #EAEAEA;
 @border-color_focus_inputText:                                              #EAEAEA #EAEAEA #AAB0C1 #EAEAEA;
