https://online.sbis.ru/opendoc.html?guid=6bb82634-ba58-4f8a-98ea-59df81f018e0 https://online.sbis.ru/opendoc.html?guid=1d7970a4-718c-42ce-8a16-416bfc95b9d7

--- a/Controls-default-theme/dark/_aliases.less
+++ b/Controls-default-theme/dark/_aliases.less
@@ -95,6 +95,7 @@
 @track_color_switcher:                                #999;
 @border-color_switcher:                               #565e69;
 @marker-box_border-color_checkbox:                    #999999;
+@marker-box_border-color_switcher:                    #999999;
 
 //scroll
 @accented_thumb_background-color_scrollbar:                                   rgba(255, 255, 255, .2);
