https://online.sbis.ru/opendoc.html?guid=a1b10b23-037b-46e6-84f6-434c7032aa63

--- a/Controls-default-theme/aliases/_list.less
+++ b/Controls-default-theme/aliases/_list.less
@@ -71,6 +71,7 @@
 
 @checkbox_offset-top_list:                                          3px;
 @checkbox_offset-left_list:                                         0;
+@checkbox_height_list:                                              @height_checkbox;
 
 // Отступы в элементах списка
 
