--- a/Controls/_toggle/Checkbox/_Checkbox.less
+++ b/Controls/_toggle/Checkbox/_Checkbox.less
@@ -51,6 +51,8 @@
 }
 .controls-Checkbox__iconWrapper_theme-@{themeName} {
    width: @click-area_width_checkbox;
+}
+.controls-Checkbox__iconWrapper_inCheckbox_theme-@{themeName} {
    height: @height_checkbox;
 }
 .controls-Checkbox__iconWrapper_theme-@{themeName}:before {
