https://online.sbis.ru/opendoc.html?guid=499d16d8-8f9e-4d32-a3ff-ac9cc1ce9842

--- a/Controls/_tile/TileView/_TileView.less
+++ b/Controls/_tile/TileView/_TileView.less
@@ -191,7 +191,7 @@
    position: absolute;
    z-index: 1;
 
-   .controls-Checkbox__iconWrapper:before {
+   &.controls-Checkbox__iconWrapper:before {
       background-color: @background-color;
    }
 }
