https://online.sbis.ru/opendoc.html?guid=32c80a97-5171-4f44-905c-f94bcd4c6ec1

--- a/Controls/_buttons/_Button.less
+++ b/Controls/_buttons/_Button.less
@@ -39,12 +39,12 @@
 
 .controls-Button__wrapper_viewMode-button {
    align-items: baseline;
-   .controls-Button__icon {
+   .controls-BaseButton__icon {
       align-self: center;
    }
 }
 
-.controls-Button__icon {
+.controls-BaseButton__icon {
    order: 1;
 }
 
