https://online.sbis.ru/opendoc.html?guid=95bb1df2-57b5-40c8-a47b-49db00aa02f9

--- a/Controls-default-theme/aliases/_dragnDrop.less
+++ b/Controls-default-theme/aliases/_dragnDrop.less
@@ -38,3 +38,10 @@
 @counter_background-color_draggingTemplate:       #0055bb;
 @counter_border-radius_draggingTemplate:          @counter_height_draggingTemplate / 2;
 @counter_padding-horizontal_draggingTemplate:     6px;
+
+
+
+// Переменные для контрола движения границ
+
+@thickness_dragnDropResizingLine:                   5px;
+@drag-area_background-color_dragnDropResizingLine:  rgba(204, 204, 204, 0.35);
