--- a/Controls-default-theme/aliases/_filterPopup.less
+++ b/Controls-default-theme/aliases/_filterPopup.less
@@ -158,3 +158,8 @@
 @checkbox-group_offset-top_filterFavoriteDialog:                            8px;
 @selector_padding-right_filterFavoriteDialog:                               16px;
 @deleteButton_offset-right_filterFavoriteDialog:                            16px;
+
+
+
+// Переменные для отдельных элементов панели фильтрации
+@link_offset-right_filterPopupLookup:                                       8px;
