--- a/Controls-default-theme/_aliases.less
+++ b/Controls-default-theme/_aliases.less
@@ -123,7 +123,14 @@
 
 //Размер тэга.
 //Примечание: тэг - это цветной индикатор, использующийся для информации о состоянии поля.
-@tag-size:                                                                  8px;
+@tag-size:                          8px;
+
+
+
+// Отображение картинок
+
+@border-radius_s_image:             4px;
+@border-radius_m_image:             8px;
 
 @import "aliases/_controls";
 
