--- a/Controls/Application/Application.less
+++ b/Controls/Application/Application.less
@@ -84,11 +84,11 @@ input[type="reset"]::-moz-focus-inner {
 /*core-min::  styles*/
 
 .controls-roundedCorner_size_s {
-   border-radius: @border-radius_Image_s;
+   border-radius: @border-radius_s_image;
 }
 
 .controls-roundedCorner_size_m {
-   border-radius: @border-radius_Image_m;
+   border-radius: @border-radius_m_image;
 }
 
 .ws-hidden {
