https://online.sbis.ru/opendoc.html?guid=a1b10b23-037b-46e6-84f6-434c7032aa63

--- a/Controls/_tile/TileView/_TileView.less
+++ b/Controls/_tile/TileView/_TileView.less
@@ -188,11 +188,13 @@
 }
 
 .controls-TileView__checkbox {
-   position: absolute;
-   z-index: 1;
+   &.controls-Checkbox__iconWrapper {
+      position: absolute;
+      z-index: 1;
 
-   &.controls-Checkbox__iconWrapper:before {
-      background-color: @background-color;
+      &:before {
+         background-color: @background-color;
+      }
    }
 }
 
