--- a/Controls/_lookup/SelectedCollection/_SelectedCollection.less
+++ b/Controls/_lookup/SelectedCollection/_SelectedCollection.less
@@ -155,6 +155,13 @@
     position: relative;
 }
 
+.ws-is-ie {
+    .controls-SelectedCollection__collection_singleLine {
+        .flex-direction(row-reverse);
+        .justify-content();
+    }
+}
+
 .controls-SelectedCollection__collection-default:after,
 .controls-SelectedCollection__collection-oneRow:after {
     content: '\200b';
