https://online.sbis.ru/opendoc.html?guid=97559c4b-b0eb-4eb2-8b43-c986ef7cc228

--- a/Controls/_list/EditInPlace/_Text.less
+++ b/Controls/_list/EditInPlace/_Text.less
@@ -71,6 +71,16 @@
    display: inline-block;
 }
 
+/* В Safari iPad по-другому рассчитываются пиксели при align-items: center ( класс controls-EditingTemplateText), из-за чего текст опущен на 1px вниз по сравнению с другими браузерами. Тогда позиционируем текст внутри
+по базовой линии */
+
+.ws-is-mobile-safari {
+   .controls-EditingTemplateText__inner {
+     display: inline-flex;
+     align-self: baseline;
+   }
+
+
 .controls-EditingTemplateText_size_default {
    height: @inline_height_default;
    font-size: @font-size_default;
