https://online.sbis.ru/opendoc.html?guid=56e03433-9f13-451d-8e27-33c56ab2f170

--- a/Controls/_operations/MultiSelector/_MultiSelector.less
+++ b/Controls/_operations/MultiSelector/_MultiSelector.less
@@ -10,8 +10,11 @@
   background-color: #ccc;
 }
 
-.controls-operationsPanelV__loadingIndicatorImg-wrapper {
+.controls-operationsPanelV__loadingIndicatorImg-wrapper .controls-loading-indicator_theme-@{themeName} {
   position: relative;
+}
+
+.controls-operationsPanelV__loadingIndicatorImg-wrapper .controls-loading-indicator-in_theme-@{themeName} {
   margin-left: @loadingIndicator_offset-left_multiSelectorButton;
   width: @size_LoadingIndicator-s;
   height: @size_LoadingIndicator-s;
