--- a/Controls/_grid/resources/DragScroll/DragScroll.less
+++ b/Controls/_grid/resources/DragScroll/DragScroll.less
@@ -21,10 +21,22 @@
          cursor: grab;
       }
    }
+
    .controls-Grid__header-cell:not(.controls-Grid__cell_fixed) {
       .controls-Grid__header-cell__content:not(.js-controls-ColumnScroll__notDraggable) {
          cursor: grab;
       }
+
+      // Удалить после https://online.sbis.ru/opendoc.html?guid=43399cd1-c875-42da-8b6c-3c1e3a413cbc
+      cursor: grab;
    }
 
+   .controls-Grid__results-cell:not(.controls-Grid__cell_fixed) {
+      .controls-Grid__results-cell__content:not(.js-controls-ColumnScroll__notDraggable) {
+         cursor: grab;
+      }
+
+      // Удалить после https://online.sbis.ru/opendoc.html?guid=43399cd1-c875-42da-8b6c-3c1e3a413cbc
+      cursor: grab;
+   }
 }
