--- a/Controls-demo/BreadCrumbs/Scenarios/Scenarios.less
+++ b/Controls-demo/BreadCrumbs/Scenarios/Scenarios.less
@@ -43,8 +43,10 @@
    align-self: center;
    margin-right: 6px;
    border-radius: 6px;
-   width: 40px;
-   height: 40px;
+   max-width: 40px;
+   min-width: 40px;
+   max-height: 40px;
+   min-height: 40px;
 }
 
 .demo-PersonInfo__row {
