--- a/Controls-default-theme/aliases/_controls.less
+++ b/Controls-default-theme/aliases/_controls.less
@@ -27,6 +27,7 @@
 @import "_loadingIndicator";
 @import "_shortDatePicker";
 @import "_lookup";
+@import "_lookupPopup";
 @import "_scroll";
 @import "_breadcrumbs";
 @import "_suggest";
