--- a/Controls/_lookupPopup/SelectedCollection/_Popup.less
+++ b/Controls/_lookupPopup/SelectedCollection/_Popup.less
@@ -11,15 +11,13 @@
 }
 
 .controls-SelectedCollection__header_wrapper_theme-@{themeName} {
-    line-height: @icon-size_m;
-    padding-left: @spacing_default_l;
+    line-height: @inline_height_m;
+    padding-left: @padding-horizontal_lookupPopup;
     padding-top: @close-button_offset-top_infobox;
 }
 
 .controls-SelectedCollection__in_popup {
-    padding-left: @spacing_default_l;
-    padding-right: @spacing_default_l;
-    padding-bottom: @spacing_default_m;
+    padding: 0 @padding-horizontal_lookupPopup @padding-bottom_lookupPopup;
 }
 
 .controls-SelectedCollection__collection_multiLine.controls-SelectedCollection__in_popup {
