https://online.sbis.ru/opendoc.html?guid=9c87aac6-60cb-4679-8b31-67f93fcaf5ba Добавил фон по умолчанию для stack

--- a/Controls/_popupTemplate/Stack/_Stack.less
+++ b/Controls/_popupTemplate/Stack/_Stack.less
@@ -12,6 +12,11 @@
    background-color: @background-color_stack;
 }
 
+// Класс для установки фона контрола через backgroundStyle (stack)
+.controls-background-stack_theme-@{themeName} {
+   background-color: @background-color_stack;
+}
+
 .controls-StackTemplate-shadow {
    position: absolute;
    height:100%;
