--- a/Controls/_filterPopup/Panel/Link/_Link.less
+++ b/Controls/_filterPopup/Panel/Link/_Link.less
@@ -6,6 +6,7 @@
 
 .controls-FilterLink__text {
    color: @item_text-color_filterPanel;
+   font-size: @item_font-size_filterPanel;
    cursor: pointer;
    white-space: nowrap;
    overflow: hidden;
