--- a/Controls/_operations/MultiSelector/_MultiSelector.less
+++ b/Controls/_operations/MultiSelector/_MultiSelector.less
@@ -10,10 +10,11 @@
   background-color: #ccc;
 }
 
+//TODO: will be deleted after https://online.sbis.ru/opendoc.html?guid=24d818b6-3e4d-45d9-9647-0128ae573cd2
 .controls-operationsPanelV__loadingIndicatorImg-wrapper .controls-loading-indicator_theme-@{themeName} {
   position: relative;
 }
-
+//TODO: will be deleted after https://online.sbis.ru/opendoc.html?guid=24d818b6-3e4d-45d9-9647-0128ae573cd2
 .controls-operationsPanelV__loadingIndicatorImg-wrapper .controls-loading-indicator-in_theme-@{themeName} {
   margin-left: @loadingIndicator_offset-left_multiSelectorButton;
   width: @size_LoadingIndicator-s;
