--- a/Controls/_menu/Control/_Control.less
+++ b/Controls/_menu/Control/_Control.less
@@ -248,7 +248,7 @@
    padding-left: @click-area_width_checkbox;
 }
 
-.controls-inlineheight-menuapply_theme-default {
+.controls-inlineheight-menuapply_theme-@{themeName} {
    height: @apply-button_inline-height_menuPopup;
    min-width: @apply-button_inline-height_menuPopup;
    border-radius: @apply-button_border-radius_menuPopup;
