--- a/Controls/_grid/layout/grid/_Grid.less
+++ b/Controls/_grid/layout/grid/_Grid.less
@@ -6,7 +6,7 @@
 .ws-is-mobile-chrome-ios,
 .ws-is-desktop-safari, 
 .ws-is-mobile-safari {
-   .controls-Grid {
+   .controls-Grid_columnScroll {
       // заставляем браузер использовать аппаратное ускорение, иначе на ipad появляются дыры при скролле
       // https://online.sbis.ru/opendoc.html?guid=176cb04e-b297-4827-b643-b91d2c9486ff
       transform: translateZ(0);
