--- a/Controls-default-theme/aliases/_datePopup.less
+++ b/Controls-default-theme/aliases/_datePopup.less
@@ -16,6 +16,7 @@
 @monthlist_monthview_item_border-thickness_datePicker:            @border-thickness;
 @monthlist_monthview_item_border-color_datePicker:                transaprent;
 @monthlist_monthview_item_hover_border-color_datePicker:          #8991A9;
+@yearlist_monthview_item_selected_border-color_datePicker:        #8991A9;
 @monthlist_monthview_item_selected_border-color_datePicker:       @monthlist_monthview_item_hover_border-color_datePicker;
 
 //Заголовок месяца
@@ -43,7 +44,7 @@
 @monthlist_monthview_selection-border_single_thickness_datePicker:   @rangeSelection_border_single_thickness_datePicker;
 @monthlist_monthview_selection-border_single_color_datePicker:       @rangeSelection_border_single_color_datePicker;
 
-@rangeSelection_item_background-color_datePicker:					   #F0F5FB;
+@rangeSelection_item_background-color_datePicker:                 #f0f5fb;
 @rangeSelection_item_hover_background-color_datePicker:			   #E6ECFA;
 @rangeSelection_item_edge_background-color_datePicker:				#E6ECFA;
 @rangeSelection_border_thickness_datePicker:                      3px;
@@ -51,3 +52,14 @@
 @rangeSelection_border_single_thickness_datePicker:               2px;
 @rangeSelection_border_single_color_datePicker:                   #0055BB;
 
+@yearlist_monthview_height_datePicker:                                  72px;
+@yearlist_monthview_bottom-offset_datePicker:                           2px;//todo
+@yearlist_monthview_item_height_datePicker:                             12px;
+@yearlist_monthview_item_width_datePicker:                              12px;
+@yearlist_monthview_item_font-size_datePicker:                          8px;
+@yearlist_monthview_heading_height_datePicker:                          auto;
+@yearlist_monthview_selection-border_thickness_datePicker:              1px;
+@yearlist_monthview_selection-border_single_thickness_datePicker:       1px;
+@yearlist_monthview_selection-border_single_color_datePicker:           @rangeSelection_border_single_color_datePicker;
+@yearlist_monthview_item_selected_hover_background-color_datePicker:    @rangeSelection_item_hover_background-color_datePicker;
+@yearlist_monthview_item_selected_background-color_datePicker:          @rangeSelection_item_background-color_datePicker;
