https://online.sbis.ru/opendoc.html?guid=8c05fc61-185b-4a73-9fa7-5f9132a43aac

--- a/Controls/_input/Date/Picker/_Picker.less
+++ b/Controls/_input/Date/Picker/_Picker.less
@@ -21,6 +21,19 @@
    font-family: @icon_font-family_s;
 }
 
+.ws-is-hover {
+   .controls-Input-DatePicker__button:hover {
+      color: @trigger_hover_icon-color_inputDate;
+   }
+}
+
+.ws-is-no-touch,
+.ws-is-touch {
+   .controls-Input-DatePicker__button:active {
+      color: @trigger_active_icon-color_inputDate;
+   }
+}
+
 .controls-PeriodDialog__picker-withoutModeBtn {
    margin-top: @shift-top_PeriodDialog-picker;
    margin-left: @shift-left_PeriodDialog-picker-withoutModeBtn;
